--- a/src/main.css
+++ b/src/main.css
@@ -4,10 +4,9 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 h1 {
